syntax = "proto3";

package users;

import "google/protobuf/timestamp.proto";

service UsersService {
  rpc GetUserProfile (GetUserProfileRequest) returns (GetUserProfileResponse);
}

message GetUserProfileRequest {
  string userId = 1;
}

message GetUserProfileResponse {
  string firstname = 1;
  string lastname = 2;
  string phonenumber = 3;
  string address = 4;
}

message Users {
  string id = 1;
  string userId = 2;
  string firstname = 3;
  string lastname = 4;
  string phonenumber = 5;
  string address =6;
}